# magisk-module-template-rs

./: Cargo.toml  README.md  edit_name.sh  init.sh  init_name.sh  make.sh
.github/workflows/: ci-build.yml
build_module/: customize.sh  module.prop  service.sh
